[gd_scene load_steps=14 format=3 uid="uid://dl5wx8l0awoi0"]

[ext_resource type="PackedScene" uid="uid://8awe4usnucyv" path="res://sources/minigames/base/base_minigame.tscn" id="1_ng5er"]
[ext_resource type="Script" uid="uid://b7q0v031ffg1v" path="res://sources/minigames/frog/frog_minigame.gd" id="2_0xg3r"]
[ext_resource type="Texture2D" uid="uid://jvpu77isfi5b" path="res://assets/minigames/frog/graphics/gauge_icon_frog_empty.png" id="2_e38i1"]
[ext_resource type="Texture2D" uid="uid://cusulkkvcyxak" path="res://assets/minigames/frog/graphics/sand_left.png" id="3_eaixk"]
[ext_resource type="Texture2D" uid="uid://re7qgivb3n5w" path="res://assets/minigames/frog/graphics/gauge_icon_frog_full.png" id="3_vjlmb"]
[ext_resource type="Texture2D" uid="uid://c7im0b3uxb6ha" path="res://assets/minigames/frog/graphics/grass_left.png" id="4_mvhry"]
[ext_resource type="PackedScene" uid="uid://sumrd1i3g6f7" path="res://sources/minigames/frog/river.tscn" id="5_3fy8q"]
[ext_resource type="Texture2D" uid="uid://tl6bs08l37ar" path="res://assets/minigames/frog/graphics/sand_right.png" id="5_6ofrr"]
[ext_resource type="Texture2D" uid="uid://dg4n6nv84tl3u" path="res://assets/minigames/frog/graphics/grass_right.png" id="6_bvdcd"]
[ext_resource type="Texture2D" uid="uid://ct24yoo1efipg" path="res://assets/minigames/frog/graphics/reed_01.png" id="7_161vn"]
[ext_resource type="Texture2D" uid="uid://djg2gkxxjgqwx" path="res://assets/minigames/frog/graphics/reed_02.png" id="8_ps7uv"]
[ext_resource type="Texture2D" uid="uid://b51kxs3qm3wiw" path="res://assets/minigames/frog/graphics/rock.png" id="13_lifwj"]
[ext_resource type="PackedScene" uid="uid://bloyucpsbvpx8" path="res://sources/minigames/frog/frog.tscn" id="13_o6mls"]

[node name="FrogMinigame" instance=ExtResource("1_ng5er")]
script = ExtResource("2_0xg3r")
max_number_of_gps = 6
distractors_queue_size = 6
time_between_words = 3.0
minigame_name = 5
lesson_nb = 26
difficulty = 4
max_number_of_lives = 5
max_progression = 5

[node name="MinigameUI" parent="." index="1"]
empty_progression_icon = ExtResource("2_e38i1")
full_progression_icon = ExtResource("3_vjlmb")

[node name="Background" type="Control" parent="GameRoot" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="River" parent="GameRoot/Background" index="0" instance=ExtResource("5_3fy8q")]
layout_mode = 1

[node name="LeftSand" type="TextureRect" parent="GameRoot/Background" index="1"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 676.0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_eaixk")

[node name="LeftGrass" type="TextureRect" parent="GameRoot/Background" index="2"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 478.0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_mvhry")

[node name="RightSand" type="TextureRect" parent="GameRoot/Background" index="3"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -492.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_6ofrr")

[node name="RightGrass" type="TextureRect" parent="GameRoot/Background" index="4"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -365.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("6_bvdcd")

[node name="Rocks" type="Control" parent="GameRoot/Background" index="5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Rock" type="TextureRect" parent="GameRoot/Background/Rocks" index="0"]
layout_mode = 0
offset_left = 461.0
offset_top = 129.0
offset_right = 556.0
offset_bottom = 347.0
mouse_filter = 2
texture = ExtResource("7_161vn")

[node name="Rock2" type="TextureRect" parent="GameRoot/Background/Rocks" index="1"]
layout_mode = 0
offset_left = 260.0
offset_top = 1134.0
offset_right = 355.0
offset_bottom = 1352.0
mouse_filter = 2
texture = ExtResource("7_161vn")

[node name="Rock3" type="TextureRect" parent="GameRoot/Background/Rocks" index="2"]
layout_mode = 0
offset_left = 2172.0
offset_top = 184.0
offset_right = 2337.0
offset_bottom = 432.0
mouse_filter = 2
texture = ExtResource("8_ps7uv")

[node name="Rock4" type="TextureRect" parent="GameRoot/Background/Rocks" index="3"]
layout_mode = 0
offset_left = 2268.0
offset_top = 1098.0
offset_right = 2467.0
offset_bottom = 1388.0
mouse_filter = 2
texture = ExtResource("8_ps7uv")

[node name="Rock5" type="TextureRect" parent="GameRoot/Background/Rocks" index="4"]
layout_mode = 0
offset_left = 263.0
offset_top = 1383.0
offset_right = 470.0
offset_bottom = 1679.0
mouse_filter = 2
texture = ExtResource("8_ps7uv")

[node name="Rock6" type="TextureRect" parent="GameRoot/Background/Rocks" index="5"]
layout_mode = 0
offset_left = 221.0
offset_top = 467.0
offset_right = 428.0
offset_bottom = 763.0
mouse_filter = 2
texture = ExtResource("8_ps7uv")

[node name="Rock7" type="TextureRect" parent="GameRoot/Background/Rocks" index="6"]
layout_mode = 0
offset_left = 2342.0
offset_top = 467.0
offset_right = 2457.0
offset_bottom = 736.0
mouse_filter = 2
texture = ExtResource("7_161vn")

[node name="Rock8" type="TextureRect" parent="GameRoot/Background/Rocks" index="7"]
layout_mode = 0
offset_left = 2200.0
offset_top = 1465.0
offset_right = 2315.0
offset_bottom = 1734.0
mouse_filter = 2
texture = ExtResource("7_161vn")

[node name="Rock9" type="TextureRect" parent="GameRoot/Background/Rocks" index="8"]
layout_mode = 0
offset_left = 2347.0
offset_top = 1413.0
offset_right = 2462.0
offset_bottom = 1682.0
mouse_filter = 2
texture = ExtResource("7_161vn")

[node name="Rock10" type="TextureRect" parent="GameRoot/Background/Rocks" index="9"]
layout_mode = 0
offset_left = 191.0
offset_top = 242.0
offset_right = 286.0
offset_bottom = 460.0
mouse_filter = 2
texture = ExtResource("7_161vn")

[node name="Rock11" type="TextureRect" parent="GameRoot/Background/Rocks" index="10"]
layout_mode = 0
offset_left = 458.0
offset_top = 1137.0
offset_right = 553.0
offset_bottom = 1355.0
mouse_filter = 2
texture = ExtResource("7_161vn")

[node name="GameElements" type="Control" parent="GameRoot" index="1"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Start" type="Control" parent="GameRoot/GameElements" index="0"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 478.0
offset_top = 900.0
offset_right = 518.0
offset_bottom = 940.0
mouse_filter = 2

[node name="Rock" type="TextureRect" parent="GameRoot/GameElements/Start" index="0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -291.0
offset_top = -313.0
offset_right = -80.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
mouse_filter = 2
texture = ExtResource("13_lifwj")

[node name="End" type="Control" parent="GameRoot/GameElements" index="1"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 2341.5
offset_top = 900.0
offset_right = 2381.5
offset_bottom = 940.0
mouse_filter = 2

[node name="Rock" type="TextureRect" parent="GameRoot/GameElements/End" index="0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -268.5
offset_top = -300.0
offset_right = -57.5
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
mouse_filter = 2
texture = ExtResource("13_lifwj")

[node name="FrogSpawnPoint" type="Control" parent="GameRoot/GameElements" index="2"]
unique_name_in_owner = true
anchors_preset = 0
offset_left = -228.0
offset_top = 900.0
offset_right = -228.0
offset_bottom = 900.0

[node name="FrogDespawnPoint" type="Control" parent="GameRoot/GameElements" index="3"]
unique_name_in_owner = true
anchors_preset = 0
offset_left = 2788.0
offset_top = 900.0
offset_right = 2788.0
offset_bottom = 900.0

[node name="LilypadTracksContainer" type="HBoxContainer" parent="GameRoot" index="2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 654.0
offset_top = -250.0
offset_right = -479.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Frog" parent="GameRoot" index="3" instance=ExtResource("13_o6mls")]
unique_name_in_owner = true
offset_left = 478.0
offset_top = 900.0
offset_right = 478.0
offset_bottom = 900.0
